# android-gradle-bazel

./: .gitignore  BUILD.bazel  WORKSPACE  build.sh  install.sh  settings.gradle
app/: BUILD.bazel  build.gradle
app/src/androidTest/java/org/morfly/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml  AppAndroidManifest.xml  DataBindingAdaptersManifest.xml  DataBindingResourcesManifest.xml  ViewModelsManifest.xml
app/src/main/java/org/morfly/gradle/app/: BindingAdapters.java  BindingAdapters.kt  MainActivity.kt  MainViewModel.kt  ResViewModel.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/org/morfly/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
lib1/: BUILD.bazel
lib1/src/main/: AndroidManifest.xml  DataBindingAdaptersManifest.xml  DataBindingResourcesManifest.xml  LibOneAndroidManifest.xml  ViewModelsManifest.xml
lib1/src/main/java/org/morfly/gradle/lib1/: Lib1.kt  Lib1Activity.kt  LibOneBindingAdapters.java  LibOneBindingAdapters.kt  MainViewModel1.kt  ResViewModel1.kt
lib1/src/main/res/layout/: activity_main_1.xml
tools/android/: BUILD.bazel
tools/kotlin/: kotlin.bzl
