load("//tools/kotlin:kotlin.bzl", "kt_android_library")
load("@rules_jvm_external//:defs.bzl", "artifact")

package(default_visibility = ["//visibility:public"])


DATABINDING_LAYOUTS = [
    "src/main/res/layout/activity_main_1.xml"
]

VIEW_MODELS_WITH_RESOURCE_IMPORTS = [
#    "src/main/java/org/morfly/gradle/lib1/ResViewModel1.kt",
]

VIEW_MODELS = [
    "src/main/java/org/morfly/gradle/lib1/MainViewModel1.kt",
] +  [
    "modify_imports_in_" + view_models_with_resource_imports[0:-3]
    for view_models_with_resource_imports in VIEW_MODELS_WITH_RESOURCE_IMPORTS
]

[
    genrule(
        name = "modify_imports_in_" + file[0:-3],
        srcs = [file],
        outs = [file[0:-3] + "_modified.kt"],
        cmd = """
    cat $(SRCS) |
    sed 's/import org.morfly.gradle.R/import org.morfly.gradle.lib1.viewmodels.R/g' > $(OUTS)
    """,
    )
    for file in VIEW_MODELS_WITH_RESOURCE_IMPORTS
]

BINDING_ADAPTERS = [
    "src/main/java/org/morfly/gradle/lib1/LibOneBindingAdapters.java"
]

EXCLUDED_LIB_APP_FILES = VIEW_MODELS + BINDING_ADAPTERS

APP_FILES_WITH_RESOURCE_IMPORTS = glob(
    ["src/main/java/org/morfly/gradle/lib1/**/*.kt"],
    exclude = EXCLUDED_LIB_APP_FILES
)

APP_FILES = [] + APP_FILES_WITH_RESOURCE_IMPORTS


kt_android_library(
    name = "view_models",
    srcs = VIEW_MODELS,
    custom_package = "org.morfly.gradle.lib1.viewmodels",
    manifest = "src/main/ViewModelsManifest.xml",
    enable_data_binding = True,
    deps = [
        ":resources",
        artifact("androidx.databinding:databinding-common"),
        artifact("androidx.databinding:databinding-runtime"),
    ]
)

android_library(
    name = "binding_adapters",
    srcs = BINDING_ADAPTERS,
    enable_data_binding = True,
    custom_package = "org.morfly.gradle.lib1.databinding.adapters",
    manifest = "src/main/DataBindingAdaptersManifest.xml",
    deps = [
        ":resources",
        ":view_models",
        artifact("androidx.annotation:annotation"),
    ]
)

android_library(
    name = "resources",
    custom_package = "org.morfly.gradle.lib1",
    manifest = "src/main/AndroidManifest.xml",
    exports_manifest = True,
    resource_files = glob(
        ["src/main/res/**"],
        exclude = DATABINDING_LAYOUTS
    )
)

#kt_android_library(
#    name = "lib1_proxy",
#    custom_package = "org.morfly.gradle.lib1_proxy",
#    srcs = ["src/main/java/org/morfly/gradle/lib1/Lib1.kt"],
#    deps = [
#        ":binding_adapters"
#    ],
#)

kt_android_library(
    name = "lib1",
    srcs = APP_FILES + BINDING_ADAPTERS,
    custom_package = "org.morfly.gradle.lib1",
    manifest = "src/main/LibOneAndroidManifest.xml",
    exports_manifest = True,
    enable_data_binding = True,
    resource_files = glob(DATABINDING_LAYOUTS),
    deps = [
        ":binding_adapters",
        ":view_models",
        ":resources",
#        ":lib1_proxy",
        artifact("androidx.databinding:databinding-adapters"),
        artifact("androidx.databinding:databinding-common"),
        artifact("androidx.databinding:databinding-runtime"),
        artifact("androidx.annotation:annotation"),
    ]
)

kt_android_library(
    name = "lib1_proxy",
    custom_package = "org.morfly.gradle.lib1.proxy",
    srcs = ["src/main/java/org/morfly/gradle/lib1/Lib1.kt"],
    deps = [
        "//lib1"
    ],
)